# scunveil

./: .gitignore  LICENSE  README.md  pypi_deployment.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: tests.yml
examples/: advanced_usage.py  basic_usage.py
src/scunveil/: __init__.py  _data_operations.py  _inference.py  _layers.py  _model.py
tests/: conftest.py  test_data_operations.py  test_inference.py  test_integration.py
